cmake_minimum_required(VERSION 3.17)
project(Tarea_1_EC_Datos_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_1_EC_Datos_II main.cpp Node/Node.cpp Node/Node.h "SImply LInked List/SimplyLL.cpp" "SImply LInked List/SimplyLL.h" LIst/LIst.cpp LIst/LIst.h Collector/Collector.cpp Collector/Collector.h)